# brevis-vera

./: AGENTS.md  Cargo.toml  PRESENTATION_GUIDE.md  README.md  SPEC.md  proofs  run_proof.sh  start_servers.sh
.claude/plans/: humming-foraging-naur.md
app/: Cargo.toml
app/elf/: riscv32im-pico-zkvm-elf
app/src/: main.rs
artifacts/: dsc_mock_metadata.json  emulation_result_2026-03-09.md  mock_metadata.json  perf_matrix_commit.csv  perf_matrix_nightly.csv  perf_report.json  perf_report_5runs.json  perf_series_1024_meta.json  perf_series_2048_meta.json  perf_series_256_meta.json  perf_series_4096_meta.json  perf_series_512_meta.json  public_values.json  public_values_new.json  series_1024_meta.json  series_2048_meta.json  series_256_meta.json  series_4096_meta.json  series_512_meta.json  series_emulation.csv  web_mock_metadata.json
artifacts/ci_fixtures/: case_a_emu_meta.json  case_a_meta.json  case_a_pv.json  case_b_emu_meta.json  case_b_meta.json  case_b_pv.json  case_c_meta.json  case_c_proof_meta.json  case_c_proof_pv.json
artifacts/ci_negative/: meta_ok.json
artifacts/scale/: ds_1024_meta.json  ds_2048_meta.json  ds_256_meta.json  ds_512_meta.json  emulation_scaling.csv
artifacts/web_runs/manual_1773047192/: mock_metadata.json
artifacts/web_runs/run_1773047311737/: mock_metadata.json  public_values.json
artifacts/web_runs/run_1773047526423/: mock_metadata.json
artifacts/web_runs/run_1773047743318/: mock_metadata.json
image-editor/: Cargo.toml
image-editor-frontend/: index.html
image-editor/src/: lib.rs
image-processor/: test_runner.sh
image-processor/app/: Cargo.toml
image-processor/app-lib/: Cargo.toml
image-processor/app-lib/src/: lib.rs
image-processor/app/elf/: riscv32im-pico-zkvm-elf
image-processor/app/src/: main.rs
image-processor/cli/: Cargo.toml
image-processor/cli/src/: main.rs
image-processor/lib/: Cargo.toml
image-processor/lib/src/: lib.rs
image-processor/prover/: Cargo.toml
image-processor/prover/src/: main.rs
image-processor/server/: Cargo.toml
image-processor/server/src/: main.rs
image-processor/verifier/: Cargo.toml
image-processor/verifier/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
picture-reader/: Cargo.toml
picture-reader/src/: main.rs
prover/: Cargo.toml
prover/src/: main.rs
samples/: input.ppm
scripts/: check-fixtures.sh  check-negative.sh  perf-matrix.sh
test_proofs/: test_case.json
web/: Cargo.toml
web/frontend/: index.html  verify.html
web/frontend/assets/: app.js  style.css
web/src/: main.rs
