[workspace]
members = [
    "lib",
    "app",
    "prover",
    "web",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
c2pa = { version = "0.65.0", features = ["file_io"] }
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4.3"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "pkcs8"] }
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.3.0" }
pico-vm = { git = "https://github.com/brevis-network/pico", tag = "v1.3.0", package = "pico-vm" }
rand_core = "0.6.4"
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.140"
sha2 = { version = "0.10.8", default-features = false }
