[package]
name = "brevis-vera-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
brevis-vera-lib = { path = "../lib" }
c2pa = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
p256 = { workspace = true }
pico-sdk = { workspace = true }
pico-vm = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
