[package]
name = "pico-example-c2pa"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
pico-sdk = { path = "/Users/jinyaoli/Development/brevis-network/pico/sdk/sdk", default-features = false, features = ["bb"] }
alloy-sol-types = "0.8.0"
c2pa-app-lib ={ path = "../app-lib"}
