[package]
name = "zk-proof-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "zk-proof-cli"
path = "src/main.rs"

[dependencies]
c2pa-lib = { path = "../lib" }
image = "0.24"
image-editor = { path = "../../image-editor" }
pico-sdk = { path = "/Users/jinyaoli/Development/brevis-network/pico/sdk/sdk" }
alloy-sol-types = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
