[package]
name = "c2pa-lib"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
alloy-sol-types = "0.8.0"
c2pa = { version = "0.36", features = ["file_io", "unstable_api"] }
signature = "2.1"
sha2 = "0.10"
rand = "0.8"
x509-parser = "0.16"
der-parser = "9.0"
pem = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
base64 = "0.21"
chrono = "0.4"
hex = "0.4"
