[package]
name = "c2pa-prover"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
pico-sdk = { path = "/Users/jinyaoli/Development/brevis-network/pico/sdk/sdk" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
alloy-sol-types = "0.8.0"
c2pa-lib = { path = "../lib" }
image-editor = { path = "../../image-editor" }
sha2 = "0.10"
image = "0.25"
