[package]
name = "c2pa-server"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
image = "0.24"
image-editor = { path = "../../image-editor" }
